--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
           <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3026" target="_blank">Tela Phsar Toch</a></td></td>
           <td>Phnom Penh</td>
          </tr>
+          <tr>
+          <th scope="row">16</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3102"target="_blank">Tela Stat Chas</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3002" target="_blank">Tela Stat Chas</a></td></td>
+          <td>Phnom Penh</td>
+         </tr>
          <tr class="table-group-divider"></tr>
          <tr>
           <th scope="row">1</th>
