--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
          </tr>
          <tr>
           <th scope="row">15</th>
-          <td><a class="dropdown-item link-primary" href="https://36.37.136.208:3000"target="_blank">Tela Stat Chas</a></td>
-          <td><a class="dropdown-item link-primary" href="https://36.37.136.208" target="_blank">Tela Stat Chas</a></td></td>
+          <td><a class="dropdown-item link-primary" href="https://36.37.136.208:3000"target="_blank">Tela Phsar Ekreach</a></td>
+          <td><a class="dropdown-item link-primary" href="https://36.37.136.208" target="_blank">Tela Phsar Ekreach</a></td></td>
           <td>Phnom Penh</td>
          </tr>
           <tr>
@@ -148,9 +148,9 @@
          </tr>
          <tr>
           <th scope="row">17</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3155"target="_blank">Tela Stat Chas</a></td>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3055" target="_blank">Tela Stat Chas</a></td></td>
-          <td>Phnom Penh</td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3155"target="_blank">Tela Ta Khmoa</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3055" target="_blank">Tela Ta Khmoa</a></td></td>
+          <td>Kandal</td>
          </tr>
          <tr class="table-group-divider"></tr>
          <tr>
