--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Example Code Start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="logo.jpg" alt="" width="300" height="100"></a>
+        <a class="navbar-brand" href="#"><img src="logo.jpg" alt="" width="200" height="100"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -151,6 +151,18 @@
           <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3155"target="_blank">Tela Ta Khmoa</a></td>
           <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3055" target="_blank">Tela Ta Khmoa</a></td></td>
           <td>Kandal</td>
+         </tr>
+         <tr>
+          <th scope="row">18</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3128"target="_blank">Tela New Town</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3028" target="_blank">Tela New Town</a></td></td>
+          <td>Phnom Penh</td>
+         </tr>
+         <tr>
+          <th scope="row">19</th>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3162"target="_blank">Tela Plaza</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3062" target="_blank">Tela Plaza</a></td></td>
+          <td>Phnom Penh</td>
          </tr>
          <tr class="table-group-divider"></tr>
          <tr>
