--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
          </tr>
          <tr>
           <th scope="row">19</th>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3162"target="_blank">Tela Plaza</a></td>
-          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3062" target="_blank">Tela Plaza</a></td></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3162"target="_blank">Tela Toul Kok Plaza</a></td>
+          <td><a class="dropdown-item link-primary" href="https://103.101.83.5:3062" target="_blank">Tela Toul Kok Plaza</a></td></td>
           <td>Phnom Penh</td>
          </tr>
          <tr class="table-group-divider"></tr>
